--- a/ProAcc/Views/Home/Home.cshtml
+++ b/ProAcc/Views/Home/Home.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Home";
     Layout = "~/Views/shared/_Layout.cshtml";
     var mdetails = ViewBag.list;
+    var taskdetails = ViewBag.Taskdetails;
 }
 <style>
     /*.cs_Closed {
@@ -311,6 +312,44 @@
 <div style="padding: 1em;">
     <div class="row">
 
+        <div class="col-lg-12 card" style="margin-bottom:20px !important;">
+            <div class="row">
+                @if (User.IsInRole("Consultant") || User.IsInRole("Admin"))
+                {
+                    <div class="col-md-4">
+                        <div class="position-relative form-group">
+                            <label for="exampleEmail" class="">Customer Name</label>
+                            @Html.DropDownList("Customer", (IEnumerable<SelectListItem>)ViewBag.Customer, "-Select-", new { id = "IDCustomer", @class = "form-control" })
+                            @*@Html.DropDownList("Project", (IEnumerable<SelectListItem>), "- SELECT-", new { id = "IDProject", @class = "form-control" })*@
+                        </div>
+                    </div>
+                }
+                <div class="col-md-4">
+                    <label class="">Project Name</label>
+                    @if (User.IsInRole("Customer") || User.IsInRole("Project Manager"))
+                    {
+                        @Html.DropDownList("Project", (IEnumerable<SelectListItem>)ViewBag.Project, "-Select-", new { id = "IDProject", @class = "form-control" })
+                    }
+                    else
+                    {
+                        @Html.DropDownList("Project", new SelectList(Enumerable.Empty<SelectListItem>(), "IDProject", "ProjectName"),
+                               "Select a Customer", new { id = "IDProject", @class = "form-control" })
+                    }
+                </div>
+                <div class="col-md-2">
+                    <label for="exampleEmail" class="">Instance Name</label>
+                    @Html.DropDownList("Instance", new SelectList(Enumerable.Empty<SelectListItem>(), "IDInstance", "InstanceName"),
+                    "-Select-", new { id = "IDInstance", @class = "form-control" })
+                </div>
+                <div class="col-md-2">
+                    <label for="exampleEmail" class="">.</label>
+                    <button class="btn-wide mb-2 mr-2 btn btn-primary form-control" id="SubmitInstance">
+                        Select Instance
+                    </button>
+                </div>
+            </div>
+        </div>
+
         <div class="col-lg-12 card" style="margin-bottom:20px;min-height:250px;">
             <div class="row">
                 <table>
@@ -434,19 +473,19 @@
                                 value = 100;
                             }
                             @*<fieldset class="position-relative form-group" style="top: 50px;">
-                                    <monkey-bar min="0" max="100" now=@value class="prograss_Bar" labeled striped></monkey-bar>
-                                </fieldset>*@
+                                <monkey-bar min="0" max="100" now=@value class="prograss_Bar" labeled striped></monkey-bar>
+                            </fieldset>*@
                         }
                         @*<div class="position-relative form-check">
-                                <label class="form-check-label"><input name="radio1" type="radio" class="form-check-input"> Option one is this and that—be sure to include why it's great</label>
-                            </div>
-                            <div class="position-relative form-check">
-                                <label class="form-check-label">
-                                    <input name="radio1" type="radio" class="form-check-input"> Option two can be something else and selecting it will deselect option
-                                    one
-                                </label>
-                            </div>
-                            <div class="position-relative form-check disabled"><label class="form-check-label"><input name="radio1" disabled="" type="radio" class="form-check-input"> Option three is disabled</label></div>*@
+                            <label class="form-check-label"><input name="radio1" type="radio" class="form-check-input"> Option one is this and that—be sure to include why it's great</label>
+                        </div>
+                        <div class="position-relative form-check">
+                            <label class="form-check-label">
+                                <input name="radio1" type="radio" class="form-check-input"> Option two can be something else and selecting it will deselect option
+                                one
+                            </label>
+                        </div>
+                        <div class="position-relative form-check disabled"><label class="form-check-label"><input name="radio1" disabled="" type="radio" class="form-check-input"> Option three is disabled</label></div>*@
 
                         @*<div class="position-relative form-check"><label class="form-check-label"><input type="checkbox" class="form-check-input"> Check me out</label></div>*@
                     </form>
@@ -480,7 +519,7 @@
         </div>
 
 
-        <div class="col-lg-12 card" style="margin-bottom:20px !important;">
+        @*<div class="col-lg-12 card" style="margin-bottom:20px !important;">
             <div class="row">
                 @if (User.IsInRole("Consultant") || User.IsInRole("Admin"))
                 {
@@ -488,13 +527,12 @@
                         <div class="position-relative form-group">
                             <label for="exampleEmail" class="">Customer Name</label>
                             @Html.DropDownList("Customer", (IEnumerable<SelectListItem>)ViewBag.Customer, "-Select-", new { id = "IDCustomer", @class = "form-control" })
-                            @*@Html.DropDownList("Project", (IEnumerable<SelectListItem>), "- SELECT-", new { id = "IDProject", @class = "form-control" })*@
                         </div>
                     </div>
                 }
                 <div class="col-md-4">
                     <label class="">Project Name</label>
-                    @if (User.IsInRole("Customer")||User.IsInRole("Project Manager"))
+                    @if (User.IsInRole("Customer") || User.IsInRole("Project Manager"))
                     {
                         @Html.DropDownList("Project", (IEnumerable<SelectListItem>)ViewBag.Project, "-Select-", new { id = "IDProject", @class = "form-control" })
                     }
@@ -516,7 +554,8 @@
                     </button>
                 </div>
             </div>
-        </div>
+        </div>*@
+
         <div class="col-lg-12 card">
             <div class="row">
 
@@ -528,17 +567,25 @@
                             <thead>
                                 <tr>
                                     <th>Tasks</th>
-                                    <th>Progress</th>
+                                    <th>Named owner of task</th>
                                     <th>Status</th>
                                     <th>Deadline</th>
                                 </tr>
                             </thead>
                             <tbody>
+                                @foreach(var item in taskdetails)
+                                {
                                 <tr>
-
+                                    <td>@item.Task</td>
+                                    <td>@item.Name</td>
+                                    <td>@item.StatusName</td>
+                                    <td>@item.Planed__En_Date</td>
+                                </tr>
+                                }
+                                @*<tr>
                                     <td>Carry out pricing related updates</td>
                                     <td>
-                                        <monkey-bar min="0" max="100" now="80" class="prograss_Bar"></monkey-bar>@*labeled striped*@
+                                        <monkey-bar min="0" max="100" now="80" class="prograss_Bar"></monkey-bar>
                                     </td>
                                     <td>InProgress</td>
                                     <td>08 Apr 2020</td>
@@ -547,7 +594,7 @@
 
                                     <td>Migration to Material Ledger</td>
                                     <td>
-                                        <monkey-bar min="0" max="100" now="100" class="prograss_Bar"></monkey-bar>@*labeled striped*@
+                                        <monkey-bar min="0" max="100" now="100" class="prograss_Bar"></monkey-bar>
                                     </td>
                                     <td>Completed</td>
                                     <td>08 Apr 2020</td>
@@ -556,7 +603,7 @@
 
                                     <td>Pull and Push Data</td>
                                     <td>
-                                        <monkey-bar min="0" max="100" now="80" class="prograss_Bar"></monkey-bar>@*labeled striped*@
+                                        <monkey-bar min="0" max="100" now="80" class="prograss_Bar"></monkey-bar>
                                     </td>
                                     <td>InProgress</td>
                                     <td>08 Apr 2020</td>
@@ -565,11 +612,11 @@
                                     <td>Pricing Data Model Changes</td>
 
                                     <td>
-                                        <monkey-bar min="0" max="100" now="80" class="prograss_Bar"></monkey-bar>@*labeled striped*@
+                                        <monkey-bar min="0" max="100" now="80" class="prograss_Bar"></monkey-bar>
                                     </td>
                                     <td>InProgress</td>
                                     <td>08 Apr 2020</td>
-                                </tr>
+                                </tr>*@
                             </tbody>
                         </table>
                     </div>
@@ -728,7 +775,7 @@
     //};
 
     //Chart.defaults.global.defaultFontFamily = "Verdana";
-
+    
     //var ctx = document.getElementById("chart-Assessment").getContext("2d");
     var ctx1 = document.getElementById("chart-Pre_Conversion").getContext("2d");
     var ctx2 = document.getElementById("chart-Conversion").getContext("2d");
@@ -738,9 +785,8 @@
     //var ctx5 = document.getElementById("chart-Storage").getContext("2d");
 
     window.onload = function () {
-        //var ctx = document.getElementById("chart-Assessment").getContext("2d");
+         //var ctx = document.getElementById("chart-Assessment").getContext("2d");
         //window.myRadialGauge = new Chart(ctx, config);
-
         var ctx1 = document.getElementById("chart-Pre_Conversion").getContext("2d");
         window.myRadialGauge = new Chart(ctx1, config1);
 
@@ -768,6 +814,7 @@
     var gradientStroke_2 = ctx2.createLinearGradient(500, 0, 100, 0);
     gradientStroke_2.addColorStop(0, "#FB291B");
     gradientStroke_2.addColorStop(1, "#CD1B2D");
+    
 
     var gradientStroke_3 = ctx3.createLinearGradient(500, 0, 100, 0);
     gradientStroke_3.addColorStop(0, "#FDB777");
