--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -590,6 +590,12 @@
                                                 Customer Report
                                             </a>
                                         </li>
+                                        <li>
+                                            <a href="@Url.Action("OverAllTaskReport", "Report")">
+                                                <i class="metismenu-icon pe-7s-diamond"></i>
+                                                OverAll Task Report
+                                            </a>
+                                        </li>
 
                                     </ul>
                                 </li>
