--- a/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
@@ -321,8 +321,10 @@
                         if (response == "success") {
                              $.alert({
                                 title: 'Sucess !',
-                                content: 'Project Edited <strong>successfully</strong>..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
-                                icon: 'fa fa-rocket',
+                                content: 'Project Edited <strong>successfully</strong>..!',
+                                 icon: 'fa fa-rocket',
+                                //position: ['center', [-0.42, 0]],
+                                 //resizable: false,
                                 animation: 'scale',
                                 closeAnimation: 'scale',
                                 buttons: {
